# ncofdm-sync-test

./: CMakeLists.txt  README.md  README.md~
examples/: CMakeLists.txt  test_int_rxtx.cpp  test_int_tx.cpp  test_rx.cpp  test_rxtx.cpp  test_tx.cpp
matlab/: calcenergy.m  corr_decode.m  genofdmframe.m  genpnseq.m  meanangle.m  rxtx_corr.m  savecomplexvar.m
src/: CMakeLists.txt  ul_rx.cpp  ul_rx.h  ul_rxtx.cpp  ul_rxtx.h  ul_tx.cpp  ul_tx.h
