########################################################################
# Examples CMakeLists.txt
#
#
########################################################################

########################################################################
# Include directories so cmake knows where .h files live
########################################################################
include_directories (${PROJECT_SOURCE_DIR}/src)

########################################################################
# Example Sources
########################################################################
list(APPEND test_tx_srcs
	test_tx.cpp
)

########################################################################
# Create executables
########################################################################
add_executable(test_tx ${test_tx_srcs})


########################################################################
# Link executables to wl_sync_test library
########################################################################
target_link_libraries(test_tx wl_sync_test)
